--- a/index.Rmd
+++ b/index.Rmd
@@ -14,8 +14,11 @@ knitr::opts_chunk$set(echo = T, cache = T)
 
 # 강사 소개
 
-!()[]
+kakao : parkets
+fb    : [mrchypark](fb.com/mrchypark)
 
+!()[https://raw.githubusercontent.com/mrchypark/kisa_finR/master/profile.png]
+  
 # 대부분의 에러 문제를 해결할 수 있는 기초 자료형에 대한 이해 {#data-type}
 
 자료형에 대해 알고 있는 것과 자료형을 파악하는 것은 매우 중요합니다. 함수가 입력 데이터로 사용이 가능한 데이터를 입력 데이터로 지정해 주어야 실행이 되기 때문인데요. 많은 분들이 여기에서 문제가 발생합니다. 특히 작업을 진행하면서 기대하지 않은 자료형으로 중간 결과물이 나오는 경우에는 이후에 생기는 문제에 대해서 이해하기 어려울 수 있습니다.  
