--- a/index.Rmd
+++ b/index.Rmd
@@ -14,10 +14,10 @@ knitr::opts_chunk$set(echo = T, cache = T)
 
 # 강사 소개
 
-kakao : parkets
+kakao : parkets    
 fb    : [mrchypark](fb.com/mrchypark)
 
-!()[https://raw.githubusercontent.com/mrchypark/kisa_finR/master/profile.png]
+<img src="https://raw.githubusercontent.com/mrchypark/kisa_finR/master/profile.png" width="100%">
   
 # 대부분의 에러 문제를 해결할 수 있는 기초 자료형에 대한 이해 {#data-type}
 
